# elite-dangerous-control-panel

./: .clang-format  .gitattributes  .gitmodules  .lvimrc  CMakeLists.txt  Makefile  README.md  debug.sh  flash.sh  gdbConfig  lint.sh  pre-commit  sendData.py
electronics/: KY-040.kicad_sch  elite dangerous keypad.kicad_pcb  elite dangerous keypad.kicad_pro  elite dangerous keypad.kicad_sch
src/: CMakeLists.txt  buttons.cpp  buttons.h  config.cpp  config.h  config_button.cpp  config_button.h  config_direct.cpp  config_direct.h  config_led.cpp  config_led.h  config_quadrature.cpp  config_quadrature.h  config_smart.cpp  config_smart.h  hid.h  hidReport.h  inputs.c  inputs.h  led.c  led.cpp  led.h  main.c  main.cpp  mcp.cpp  mcp.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h  vbutton.cpp  vbutton.h
src/usb/: CMakeLists.txt  tusb_config.h  usb_descriptors.c  usb_descriptors.h
tools/: debug.sh  flash.sh  gdbConfig  lint.sh  pre-commit
